// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector when act and title props passed in to component 1`] = `
{
  "baseElement": <body>
    <div>
      <ul
        class="acts__list"
      >
        <li
          class="acts-list__item"
        >
          <h4
            class="acts-item__heading acts-item__heading--active"
          >
             Social Security Act 
          </h4>
          <ul
            class="titles__list"
          >
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XI-11"
                  to="[object Object]"
                >
                   Title XI [11] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XVIII-18"
                  to="[object Object]"
                >
                   Title XVIII [18] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XIX-19"
                  to="[object Object]"
                >
                   Title XIX [19] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--active"
                  data-testid="ssa-XXI-21"
                  to="[object Object]"
                >
                   Title XXI [21] 
                </routerlink-stub>
              </h4>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="acts__list"
    >
      <li
        class="acts-list__item"
      >
        <h4
          class="acts-item__heading acts-item__heading--active"
        >
           Social Security Act 
        </h4>
        <ul
          class="titles__list"
        >
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XI-11"
                to="[object Object]"
              >
                 Title XI [11] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XVIII-18"
                to="[object Object]"
              >
                 Title XVIII [18] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XIX-19"
                to="[object Object]"
              >
                 Title XIX [19] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--active"
                data-testid="ssa-XXI-21"
                to="[object Object]"
              >
                 Title XXI [21] 
              </routerlink-stub>
            </h4>
          </li>
        </ul>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "isUnmounted": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "unmount": [Function],
  "updateProps": [Function],
}
`;

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector with a loading prop 1`] = `
{
  "baseElement": <body>
    <div>
      <ul
        class="acts__list"
      >
        <li
          class="acts-list__item"
        >
          <h4
            class="acts-item__heading acts-item__heading--active"
          >
             Social Security Act 
          </h4>
          <ul
            class="titles__list"
          >
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--loading"
                  data-testid="ssa-XI-11"
                  to="[object Object]"
                >
                   Title XI [11] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--loading"
                  data-testid="ssa-XVIII-18"
                  to="[object Object]"
                >
                   Title XVIII [18] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--active titles-list__link--loading"
                  data-testid="ssa-XIX-19"
                  to="[object Object]"
                >
                   Title XIX [19] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--loading"
                  data-testid="ssa-XXI-21"
                  to="[object Object]"
                >
                   Title XXI [21] 
                </routerlink-stub>
              </h4>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="acts__list"
    >
      <li
        class="acts-list__item"
      >
        <h4
          class="acts-item__heading acts-item__heading--active"
        >
           Social Security Act 
        </h4>
        <ul
          class="titles__list"
        >
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--loading"
                data-testid="ssa-XI-11"
                to="[object Object]"
              >
                 Title XI [11] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--loading"
                data-testid="ssa-XVIII-18"
                to="[object Object]"
              >
                 Title XVIII [18] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--active titles-list__link--loading"
                data-testid="ssa-XIX-19"
                to="[object Object]"
              >
                 Title XIX [19] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--loading"
                data-testid="ssa-XXI-21"
                to="[object Object]"
              >
                 Title XXI [21] 
              </routerlink-stub>
            </h4>
          </li>
        </ul>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "isUnmounted": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "unmount": [Function],
  "updateProps": [Function],
}
`;

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector with default props 1`] = `
{
  "baseElement": <body>
    <div>
      <ul
        class="acts__list"
      >
        <li
          class="acts-list__item"
        >
          <h4
            class="acts-item__heading acts-item__heading--active"
          >
             Social Security Act 
          </h4>
          <ul
            class="titles__list"
          >
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XI-11"
                  to="[object Object]"
                >
                   Title XI [11] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XVIII-18"
                  to="[object Object]"
                >
                   Title XVIII [18] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link titles-list__link--active"
                  data-testid="ssa-XIX-19"
                  to="[object Object]"
                >
                   Title XIX [19] 
                </routerlink-stub>
              </h4>
            </li>
            <li
              class="titles-list__item"
            >
              <h4>
                <routerlink-stub
                  class="titles-list__link"
                  data-testid="ssa-XXI-21"
                  to="[object Object]"
                >
                   Title XXI [21] 
                </routerlink-stub>
              </h4>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="acts__list"
    >
      <li
        class="acts-list__item"
      >
        <h4
          class="acts-item__heading acts-item__heading--active"
        >
           Social Security Act 
        </h4>
        <ul
          class="titles__list"
        >
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XI-11"
                to="[object Object]"
              >
                 Title XI [11] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XVIII-18"
                to="[object Object]"
              >
                 Title XVIII [18] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link titles-list__link--active"
                data-testid="ssa-XIX-19"
                to="[object Object]"
              >
                 Title XIX [19] 
              </routerlink-stub>
            </h4>
          </li>
          <li
            class="titles-list__item"
          >
            <h4>
              <routerlink-stub
                class="titles-list__link"
                data-testid="ssa-XXI-21"
                to="[object Object]"
              >
                 Title XXI [21] 
              </routerlink-stub>
            </h4>
          </li>
        </ul>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "isUnmounted": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "unmount": [Function],
  "updateProps": [Function],
}
`;
